--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Nefizzo</string>
+    <string name="instructions">Instructions</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="servings">Servings</string>
+    <string name="cook">Cook</string>
+    <string name="prep">Prep</string>
+    <string name="description">Description</string>
 </resources>
