--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Nefizzo</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
     <string name="instructions">Instructions</string>
     <string name="ingredients">Ingredients</string>
     <string name="servings">Servings</string>
@@ -8,4 +10,23 @@
     <string name="description">Description</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="categories">Categories</string>
+    <string name="appetizers">Appetizers</string>
+    <string name="soups">Soups</string>
+    <string name="vegetables">Vegetables</string>
+    <string name="main_dishes">Main Dishes</string>
+    <string name="breads">Breads</string>
+    <string name="desserts">Desserts</string>
+    <string name="miscellaneous">Miscellaneous</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_category">CategoryActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
